--- a/Dev_SydneyEnciso_DevTest2.html
+++ b/Dev_SydneyEnciso_DevTest2.html
@@ -422,14 +422,14 @@
         <div class="about-2-texts__container">
           <div class="about-2-texts__subheading">
             <p>
-              <span>Interventions</span> should focus on older adult’s desire
+              <span>Interventions</span> should focus on older adult's desire
               for connectedness, participation and independence.
             </p>
           </div>
           <div class="about-2-texts">
             <div class="desktop-texts">
               <p>
-                <span>Interventions</span> should focus on older adult’s desire
+                <span>Interventions</span> should focus on older adult's desire
                 for connectedness, participation and independence.
               </p>
             </div>
@@ -445,7 +445,7 @@
             </div>
             <div>
               <p>
-                The methodology framework proposed by Asked and O’Malley and
+                The methodology framework proposed by Asked and O'Malley and
                 further developed by Levac, et al. was used to guide the scoping
                 review process. A total of 33 reviews met the inclusion
                 criteria, evaluating a range of interventions targeted at older
@@ -460,7 +460,7 @@
             <div class="about-block__info">
               <div class="polygon"></div>
               <span
-                >We’re experienced in our individual crafts and understand how
+                >We're experienced in our individual crafts and understand how
                 each one of our roles impacts your plan holistically.</span
               >
             </div>
@@ -474,15 +474,17 @@
             <div class="about-block__info">
               <div class="polygon"></div>
               <span
-                >We’re experienced in our individual crafts and understand how
+                >We're experienced in our individual crafts and understand how
                 each one of our roles impacts your plan holistically.</span
               >
             </div>
             <div class="about-block-text">
               <span>
-                Treatment Planning & <br />
-                <span> &nbsp; &nbsp; &nbsp;Placement</span>
-                <img src="assets/info.svg" alt="INFO" />
+                Treatment Planning &<br />
+                <span class="placement-line">
+                  &nbsp;&nbsp;&nbsp;Placement
+                  <img src="assets/info.svg" alt="INFO" />
+                </span>
               </span>
             </div>
           </div>
@@ -491,7 +493,7 @@
             <div class="about-block__info">
               <div class="polygon"></div>
               <span
-                >We’re experienced in our individual crafts and understand how
+                >We're experienced in our individual crafts and understand how
                 each one of our roles impacts your plan holistically.</span
               >
             </div>
@@ -504,7 +506,7 @@
             <div class="about-block__info">
               <div class="polygon"></div>
               <span
-                >We’re experienced in our individual crafts and understand how
+                >We're experienced in our individual crafts and understand how
                 each one of our roles impacts your plan holistically.</span
               >
             </div>
@@ -517,7 +519,7 @@
             <div class="about-block__info">
               <div class="polygon"></div>
               <span
-                >We’re experienced in our individual crafts and understand how
+                >We're experienced in our individual crafts and understand how
                 each one of our roles impacts your plan holistically.</span
               >
             </div>
@@ -530,7 +532,7 @@
             <div class="about-block__info">
               <div class="polygon"></div>
               <span
-                >We’re experienced in our individual crafts and understand how
+                >We're experienced in our individual crafts and understand how
                 each one of our roles impacts your plan holistically.</span
               >
             </div>
@@ -655,7 +657,7 @@
       <div class="video-content__container">
         <div class="video-container">
           <video
-            src="assets/movie.mp4"
+            src="assets/nature.mp4"
             width="100%"
             height="500px"
             controls
