--- a/thankyou.html
+++ b/thankyou.html
@@ -161,7 +161,7 @@
       document
         .getElementById("returnBtn")
         .addEventListener("click", function () {
-          window.location.href = "intervention.html";
+          window.location.href = "Dev_SydneyEnciso_DevTest2.html";
         });
     </script>
   </body>
